# ml_fun

./: .gitignore  .gitmodules  .pre-commit-config.yaml  pyproject.toml
approximation/: main.py
chess/: main.py
kaggle/facial-keypoints-detection/: main.py
mcts/: mcts.py
ml_fun/games/cartpole/: main.py
ml_fun/games/chess/: environment.py  main.py
ml_fun/games/m_pendulum/: a2c.py  main.py
ml_fun/games/pendulum/: main.py
ml_fun/games/reacher/: demo.py  main.py  utils.py
ml_fun/games/so101/: main.py
ml_fun/games/tictactoe/: environment.py  main.py
ml_fun/mcts/: mcts.py
ml_fun/muzero/: README.md  game.py  model.py  search.py  utils.py
ml_fun/neurosurgery/: breaking_symmetry.py
ml_fun/tutorials/jax/: mnist.py
src/cartpole/: main.py
src/chess/: environment.py  main.py
src/games/cartpole/: main.py
src/games/chess/: main.py
src/games/tictactoe/: main.py
src/mcts/: mcts.py
src/muzero/: README.md  game.py  model.py  search.py  utils.py
src/reinforcement_learning/applications/: cartpole_naive_mcts.py
src/reinforcement_learning/environments/: abstract.py  cartpole.py  multi_armed_bandit.py
src/reinforcement_learning/graph/: abstract.py  mcts.py
src/reinforcement_learning/search/mcts/expand/: abstract.py
src/reinforcement_learning/search/mcts/select/: abstract.py  random.py
src/reinforcement_learning/search/mcts/simulate/: abstract.py
src/tictactoe/: environment.py  main.py
tests/tictactoe/: test_environment.py
tictactoe/: environment.py  game.py  main.py
