[tool.poetry]
name = "ml_fun"
version = "0.1.0"
description = ""
authors = ["Stefan Mesken <kappadistributive@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.6.0"
gym = "^0.21.0"
chess = "^1.7.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = { version = "19.10b0" }
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
