[tool.poetry]
name = "ml_fun"
version = "0.1.0"
description = ""
authors = ["Stefan Mesken <kappadistributive@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
tensorflow = "^2.7.0"
gym = "^0.26.0"
chess = "^1.7.0"
tqdm = "^4.62.3"
# torch = {version = "^2.10.0+cu130", source = "torch-cuda"}
torch = {version = "^2.10.0", source = "torch-cpu"}
gymnasium = {extras = ["toy-text"], version = "^1.2.3"}
pygame = "^2.6.1"
matplotlib = "^3.10.8"
progressbar = "^2.5"
dill = "^0.4.1"
notebook = "^7.5.5"
swig = "^4.4.1"
pyyaml = "^6.0.3"
typed-ast = "^1.5.5"
wrapt = "^2.0.1"
grpcio = "^1.80.0"

[tool.poetry.group.dev.dependencies]
black = { version = ">=24.0" }
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
