[project]
name = "ml-fun"
version = "0.1.0"
description = ""
authors = [{ name = "Stefan Mesken", email = "kappadistributive@gmail.com" }]
requires-python = ">=3.11,<3.15"

dependencies = [
    "tensorflow>=2.7.0",
    "gym>=0.26.0",
    "chess>=1.7.0",
    "tqdm>=4.62.3",
    "torch>=2.10.0",
    "gymnasium[toy-text]>=1.2.3",
    "imageio>=2.37.3",
    "pygame>=2.6.1",
    "matplotlib>=3.10.8",
    "progressbar>=2.5",
    "dill>=0.4.1",
    "notebook>=7.5.5",
    "swig>=4.4.1",
    "pyyaml>=6.0.3",
    "typed-ast>=1.5.5",
    "wrapt>=2.0.1",
    "grpcio>=1.80.0",
    "jax>=0.10.0",
    "optax>=0.2.8",
    "mujoco>=3.7.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "orbax-checkpoint>=0.11.36",
    "imageio>=2.37.3",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "pytest>=6.2.5",
    "pre-commit>=2.15.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
# CPU-only PyTorch
torch = { index = "pytorch-cpu" }
# To switch to CUDA, comment the above and uncomment:
# torch = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# [[tool.uv.index]]
# name = "pytorch-cuda"
# url = "https://download.pytorch.org/whl/cu130"
# explicit = true

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
